feat: new endpoint for staker delegation check with different response
